--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -27,15 +27,21 @@ h1, .bold{
   font-family: "Galyon-Bold";
   letter-spacing: -0.025em;
 }
-
+.lang{
+  filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
+}
 .icon{
-  fill: #692657
+  fill: #692657;
 }
 .st0 {
     stroke-width: 5;
     stroke-miterlimit: 10;
+
   }
-  
+  .projjy{
+    filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
+
+  }
   .st1 {
     stroke-width: 5;
     stroke-linecap: round;
