--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -38,7 +38,7 @@ h1, .bold{
     stroke-miterlimit: 10;
 
   }
-  .projjy{
+  .projjy, .backy{
     filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
 
   }
