--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -464,6 +464,9 @@ video {
 .fixed {
   position: fixed;
 }
+.absolute {
+  position: absolute;
+}
 .relative {
   position: relative;
 }
@@ -473,8 +476,8 @@ video {
 .bottom-0 {
   bottom: 0px;
 }
-.z-10 {
-  z-index: 10;
+.z-30 {
+  z-index: 30;
 }
 .mt-0 {
   margin-top: 0px;
@@ -482,14 +485,35 @@ video {
 .-mt-1 {
   margin-top: -0.25rem;
 }
-.mt-6 {
-  margin-top: 1.5rem;
-}
-.-ml-1 {
-  margin-left: -0.25rem;
-}
 .mt-1 {
   margin-top: 0.25rem;
+}
+.mt-24 {
+  margin-top: 6rem;
+}
+.-ml-12 {
+  margin-left: -3rem;
+}
+.mt-12 {
+  margin-top: 3rem;
+}
+.mb-12 {
+  margin-bottom: 3rem;
+}
+.-mt-6 {
+  margin-top: -1.5rem;
+}
+.-ml-6 {
+  margin-left: -1.5rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+.ml-2 {
+  margin-left: 0.5rem;
+}
+.inline-block {
+  display: inline-block;
 }
 .flex {
   display: flex;
@@ -497,17 +521,32 @@ video {
 .grid {
   display: grid;
 }
+.h-20 {
+  height: 5rem;
+}
+.min-h-screen {
+  min-height: 100vh;
+}
 .w-extra-wide {
   width: 400%;
 }
 .w-full {
   width: 100%;
 }
-.w-32 {
-  width: 8rem;
+.w-9\/12 {
+  width: 75%;
+}
+.w-44 {
+  width: 11rem;
+}
+.w-20 {
+  width: 5rem;
 }
 .w-6 {
   width: 1.5rem;
+}
+.max-w-xs {
+  max-width: 20rem;
 }
 .flex-row {
   flex-direction: row;
@@ -521,17 +560,47 @@ video {
 .items-center {
   align-items: center;
 }
-.justify-start {
-  justify-content: flex-start;
-}
 .justify-center {
   justify-content: center;
 }
-.gap-2 {
-  gap: 0.5rem;
+.justify-between {
+  justify-content: space-between;
+}
+.justify-around {
+  justify-content: space-around;
+}
+.gap-4 {
+  gap: 1rem;
 }
 .gap-3 {
   gap: 0.75rem;
+}
+.gap-x-56 {
+  column-gap: 14rem;
+}
+.self-center {
+  align-self: center;
+}
+.justify-self-center {
+  justify-self: center;
+}
+.rounded-full {
+  border-radius: 9999px;
+}
+.rounded-2xl {
+  border-radius: 1rem;
+}
+.bg-accent4 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(18 24 52 / var(--tw-bg-opacity));
+}
+.bg-accent2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 82 110 / var(--tw-bg-opacity));
+}
+.bg-purp {
+  --tw-bg-opacity: 1;
+  background-color: rgb(151 97 146 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
@@ -544,43 +613,96 @@ video {
 .to-blue-400 {
   --tw-gradient-to: #60a5fa;
 }
-.fill-current {
-  fill: currentColor;
+.p-3 {
+  padding: 0.75rem;
 }
-.stroke-current {
-  stroke: currentColor;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.text-left {
+  text-align: left;
 }
 .text-center {
   text-align: center;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .font-bold {
   font-weight: 700;
 }
+.font-semibold {
+  font-weight: 600;
+}
+.font-extrabold {
+  font-weight: 800;
+}
+.italic {
+  font-style: italic;
+}
+.leading-12 {
+  line-height: 3rem;
+}
 .tracking-tighter {
   letter-spacing: -0.05em;
-}
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
 }
-.opacity-0 {
-  opacity: 0;
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+.text-purp2 {
+  --tw-text-opacity: 1;
+  color: rgb(105 38 87 / var(--tw-text-opacity));
+}
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @font-face {
   font-family: "Galyon-Bold";
   src: url("./fonts/Galyon-Bold.woff2");
@@ -600,16 +722,17 @@ html,
 body {
   margin: 0px;
   padding: 0px;
-  font-family: "IBM Plex Mono";
+  font-family: "Poppins";
 }
-#contentLayer{
+
+.contentLayer{
   min-height: 100svh;
 }
 h1,
 .bold {
   margin: 0px;
   padding: 0px;
-  letter-spacing: -.095rem;
+  letter-spacing: -.075rem;
 }
 
 h2 {
@@ -633,11 +756,6 @@ h2 {
 
 }
 
-.projjy {
-  filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
-
-}
-
 .st1 {
   stroke-width: 5;
   stroke-linecap: round;
@@ -656,51 +774,89 @@ h2 {
   opacity: 0;
 }
 
+.hover\:bg-green-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+
 .hover\:text-gray-100:hover {
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
+.hover\:text-accent4:hover {
+  --tw-text-opacity: 1;
+  color: rgb(18 24 52 / var(--tw-text-opacity));
+}
+
 @media (min-width: 768px) {
 
-  .md\:ml-8 {
-    margin-left: 2rem;
+  .md\:-ml-16 {
+    margin-left: -4rem;
   }
 
-  .md\:w-xx-wide {
-    width: 300%;
+  .md\:-mt-10 {
+    margin-top: -2.5rem;
   }
 
-  .md\:w-48 {
-    width: 12rem;
+  .md\:-ml-10 {
+    margin-left: -2.5rem;
+  }
+
+  .md\:w-80 {
+    width: 20rem;
+  }
+
+  .md\:w-72 {
+    width: 18rem;
+  }
+
+  .md\:w-8 {
+    width: 2rem;
+  }
+
+  .md\:max-w-\[175\%\] {
+    max-width: 175%;
+  }
+
+  .md\:max-w-lg {
+    max-width: 32rem;
+  }
+
+  .md\:max-w-xl {
+    max-width: 36rem;
   }
 
   .md\:flex-row {
     flex-direction: row;
   }
 
-  .md\:justify-self-center {
-    justify-self: center;
-  }
-
-  .md\:text-left {
-    text-align: left;
-  }
-
-  .md\:text-7xl {
-    font-size: 4.5rem;
+  .md\:text-8xl {
+    font-size: 6rem;
     line-height: 1;
   }
 
-  .md\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
 
 @media (min-width: 1024px) {
 
-  .lg\:w-full {
-    width: 100%;
+  .lg\:w-10 {
+    width: 2.5rem;
+  }
+}
+
+@media (min-width: 1280px) {
+
+  .xl\:gap-x-80 {
+    column-gap: 20rem;
   }
 }
