--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -476,23 +476,20 @@ video {
 .bottom-0 {
   bottom: 0px;
 }
-.z-30 {
-  z-index: 30;
-}
 .mt-0 {
   margin-top: 0px;
 }
 .-mt-1 {
   margin-top: -0.25rem;
 }
+.mt-\[2px\] {
+  margin-top: 2px;
+}
 .mt-1 {
   margin-top: 0.25rem;
 }
 .mt-24 {
   margin-top: 6rem;
-}
-.-ml-12 {
-  margin-left: -3rem;
 }
 .mt-12 {
   margin-top: 3rem;
@@ -521,29 +518,26 @@ video {
 .grid {
   display: grid;
 }
-.h-20 {
-  height: 5rem;
+.h-14 {
+  height: 3.5rem;
 }
 .min-h-screen {
   min-height: 100vh;
 }
-.w-extra-wide {
-  width: 400%;
+.w-\[500\%\] {
+  width: 500%;
 }
 .w-full {
   width: 100%;
 }
-.w-9\/12 {
-  width: 75%;
-}
-.w-44 {
-  width: 11rem;
-}
-.w-20 {
-  width: 5rem;
-}
 .w-6 {
   width: 1.5rem;
+}
+.w-14 {
+  width: 3.5rem;
+}
+.w-2\/5 {
+  width: 40%;
 }
 .max-w-xs {
   max-width: 20rem;
@@ -560,6 +554,9 @@ video {
 .items-center {
   align-items: center;
 }
+.items-stretch {
+  align-items: stretch;
+}
 .justify-center {
   justify-content: center;
 }
@@ -568,9 +565,6 @@ video {
 }
 .justify-around {
   justify-content: space-around;
-}
-.gap-4 {
-  gap: 1rem;
 }
 .gap-3 {
   gap: 0.75rem;
@@ -590,6 +584,10 @@ video {
 .rounded-2xl {
   border-radius: 1rem;
 }
+.rounded-l-2xl {
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
 .bg-accent4 {
   --tw-bg-opacity: 1;
   background-color: rgb(18 24 52 / var(--tw-bg-opacity));
@@ -597,10 +595,6 @@ video {
 .bg-accent2 {
   --tw-bg-opacity: 1;
   background-color: rgb(75 82 110 / var(--tw-bg-opacity));
-}
-.bg-purp {
-  --tw-bg-opacity: 1;
-  background-color: rgb(151 97 146 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
@@ -613,26 +607,31 @@ video {
 .to-blue-400 {
   --tw-gradient-to: #60a5fa;
 }
-.p-3 {
-  padding: 0.75rem;
+.object-cover {
+  object-fit: cover;
 }
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-.text-left {
-  text-align: left;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 .text-center {
   text-align: center;
+}
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-xs {
   font-size: 0.75rem;
@@ -642,43 +641,31 @@ video {
   font-size: 3.75rem;
   line-height: 1;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
-.font-bold {
-  font-weight: 700;
-}
-.font-semibold {
-  font-weight: 600;
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 .font-extrabold {
   font-weight: 800;
 }
+.font-semibold {
+  font-weight: 600;
+}
+.font-bold {
+  font-weight: 700;
+}
 .italic {
   font-style: italic;
 }
-.leading-12 {
-  line-height: 3rem;
+.tracking-tight {
+  letter-spacing: -0.025em;
 }
 .tracking-tighter {
   letter-spacing: -0.05em;
-}
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-gray-100 {
   --tw-text-opacity: 1;
@@ -687,6 +674,14 @@ video {
 .text-purp2 {
   --tw-text-opacity: 1;
   color: rgb(105 38 87 / var(--tw-text-opacity));
+}
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -791,10 +786,6 @@ h2 {
 
 @media (min-width: 768px) {
 
-  .md\:-ml-16 {
-    margin-left: -4rem;
-  }
-
   .md\:-mt-10 {
     margin-top: -2.5rem;
   }
@@ -803,24 +794,24 @@ h2 {
     margin-left: -2.5rem;
   }
 
-  .md\:w-80 {
-    width: 20rem;
+  .md\:h-20 {
+    height: 5rem;
   }
 
-  .md\:w-72 {
-    width: 18rem;
+  .md\:w-\[175\%\] {
+    width: 175%;
+  }
+
+  .md\:w-20 {
+    width: 5rem;
+  }
+
+  .md\:w-1\/4 {
+    width: 25%;
   }
 
   .md\:w-8 {
     width: 2rem;
-  }
-
-  .md\:max-w-\[175\%\] {
-    max-width: 175%;
-  }
-
-  .md\:max-w-lg {
-    max-width: 32rem;
   }
 
   .md\:max-w-xl {
@@ -831,19 +822,14 @@ h2 {
     flex-direction: row;
   }
 
-  .md\:text-8xl {
-    font-size: 6rem;
+  .md\:text-7xl {
+    font-size: 4.5rem;
     line-height: 1;
   }
 
   .md\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
   }
 }
 
