homepage revamp: added pokemon sprite/banner color change logic

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -2,60 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Nanum+Gothic+Coding:wght@400;700&display=swap');
 html,
 body {
   margin: 0px;
   padding: 0px;
-  font-family: "Poppins";
+  font-family: "Fragment Mono", monospace;
 }
 
-.contentLayer{
-  min-height: 100svh;
-}
-h1,
-.bold {
-  margin: 0px;
-  padding: 0px;
-  letter-spacing: -.075rem;
+#root{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
-h2 {
-  font-size: 20px;
-}
-.lang {
-  filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
+.proj_link {
+  box-shadow: 5px -5px black;
 }
 
-.icon {
-  fill: #692657;
-}
-
-.icon:hover {
-  fill: white;
-}
-
-.st0 {
-  stroke-width: 5;
-  stroke-miterlimit: 10;
-
-}
-
-.st1 {
-  stroke-width: 5;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-miterlimit: 10;
-}
-
-.st2 {
-  stroke-width: 5;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-miterlimit: 10;
-}
-
-.face {
-  opacity: 0;
+img{
+  image-rendering: pixelated;
 }
