--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -470,20 +470,11 @@ video {
 .relative {
   position: relative;
 }
-.bottom-0 {
-  bottom: 0px;
-}
 .top-0 {
   top: 0px;
 }
 .mt-0 {
   margin-top: 0px;
-}
-.mt-\[2px\] {
-  margin-top: 2px;
-}
-.mt-1 {
-  margin-top: 0.25rem;
 }
 .-mt-1 {
   margin-top: -0.25rem;
@@ -515,26 +506,23 @@ video {
 .flex {
   display: flex;
 }
-.grid {
-  display: grid;
-}
 .h-14 {
   height: 3.5rem;
 }
 .min-h-screen {
   min-height: 100vh;
 }
-.w-full {
-  width: 100%;
-}
-.w-6 {
-  width: 1.5rem;
+.w-12 {
+  width: 3rem;
 }
 .w-\[500\%\] {
   width: 500%;
 }
 .w-14 {
   width: 3.5rem;
+}
+.w-full {
+  width: 100%;
 }
 .w-2\/5 {
   width: 40%;
@@ -551,8 +539,8 @@ video {
 .items-center {
   align-items: center;
 }
-.items-stretch {
-  align-items: stretch;
+.justify-end {
+  justify-content: flex-end;
 }
 .justify-center {
   justify-content: center;
@@ -562,9 +550,6 @@ video {
 }
 .justify-around {
   justify-content: space-around;
-}
-.gap-3 {
-  gap: 0.75rem;
 }
 .gap-x-56 {
   column-gap: 14rem;
@@ -593,17 +578,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(75 82 110 / var(--tw-bg-opacity));
 }
-.bg-gradient-to-r {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
-}
-.from-green-300 {
-  --tw-gradient-from: #86efac;
-  --tw-gradient-to: rgb(134 239 172 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.to-blue-400 {
-  --tw-gradient-to: #60a5fa;
-}
 .object-cover {
   object-fit: cover;
 }
@@ -619,21 +593,6 @@ video {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.text-center {
-  text-align: center;
-}
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -646,35 +605,11 @@ video {
   font-size: 3.75rem;
   line-height: 1;
 }
-.font-extrabold {
-  font-weight: 800;
-}
-.font-semibold {
-  font-weight: 600;
-}
 .font-bold {
   font-weight: 700;
 }
 .italic {
   font-style: italic;
-}
-.tracking-tight {
-  letter-spacing: -0.025em;
-}
-.tracking-tighter {
-  letter-spacing: -0.05em;
-}
-.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
-}
-.text-purp2 {
-  --tw-text-opacity: 1;
-  color: rgb(105 38 87 / var(--tw-text-opacity));
-}
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 .text-white {
   --tw-text-opacity: 1;
@@ -695,85 +630,22 @@ video {
 }
 
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@font-face {
-  font-family: "Galyon-Bold";
-  src: url("./fonts/Galyon-Bold.woff2");
-}
-
-@font-face {
-  font-family: "Galyon-Regular";
-  src: url("./fonts/Galyon-Regular.woff2");
-}
-
-@font-face {
-  font-family: "Galyon-Italic";
-  src: url("./fonts/Galyon-Italic.woff2");
-}
 
 html,
 body {
   margin: 0px;
   padding: 0px;
   font-family: "Poppins";
+  height: 100svh;
 }
 
 .contentLayer{
   min-height: 100svh;
 }
-h1,
-.bold {
-  margin: 0px;
-  padding: 0px;
-  letter-spacing: -.075rem;
-}
-
-h2 {
-  font-size: 20px;
-}
-.lang {
-  filter: drop-shadow(3px 5px 2px rgb(0 0 0 / 0.4));
-}
-
-.icon {
-  fill: #692657;
-}
-
-.icon:hover {
-  fill: white;
-}
-
-.st0 {
-  stroke-width: 5;
-  stroke-miterlimit: 10;
-
-}
-
-.st1 {
-  stroke-width: 5;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-miterlimit: 10;
-}
-
-.st2 {
-  stroke-width: 5;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-miterlimit: 10;
-}
-
-.face {
-  opacity: 0;
-}
 
 .hover\:bg-green-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.hover\:text-gray-100:hover {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .hover\:text-accent4:hover {
@@ -813,11 +685,6 @@ h2 {
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:text-7xl {
-    font-size: 4.5rem;
-    line-height: 1;
   }
 
   .md\:text-2xl {
