--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -8,6 +8,7 @@ body {
   margin: 0px;
   padding: 0px;
   font-family: "Fragment Mono", monospace;
+  letter-spacing: -0.09em;
 }
 
 #root{
@@ -19,6 +20,10 @@ body {
 
 .proj_link {
   box-shadow: 5px -5px black;
+}
+
+h1, h2{
+  letter-spacing: -0.08em;
 }
 
 img{
