--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -464,71 +464,41 @@ video {
 .fixed {
   position: fixed;
 }
-.absolute {
-  position: absolute;
-}
-.relative {
-  position: relative;
-}
 .top-0 {
   top: 0px;
+}
+.m-4 {
+  margin: 1rem;
 }
 .mt-0 {
   margin-top: 0px;
 }
-.-mt-1 {
-  margin-top: -0.25rem;
-}
-.mt-12 {
-  margin-top: 3rem;
-}
-.mb-12 {
-  margin-bottom: 3rem;
-}
-.-mt-6 {
-  margin-top: -1.5rem;
-}
-.-ml-6 {
-  margin-left: -1.5rem;
-}
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
 .ml-2 {
   margin-left: 0.5rem;
 }
-.mt-24 {
-  margin-top: 6rem;
+.-mt-1 {
+  margin-top: -0.25rem;
 }
-.inline-block {
-  display: inline-block;
+.mt-16 {
+  margin-top: 4rem;
+}
+.mb-36 {
+  margin-bottom: 9rem;
+}
+.mb-3 {
+  margin-bottom: 0.75rem;
 }
 .flex {
   display: flex;
 }
-.h-14 {
-  height: 3.5rem;
+.h-full {
+  height: 100%;
 }
-.min-h-screen {
-  min-height: 100vh;
-}
-.w-12 {
-  width: 3rem;
+.h-24 {
+  height: 6rem;
 }
 .w-\[500\%\] {
   width: 500%;
-}
-.w-14 {
-  width: 3.5rem;
-}
-.w-full {
-  width: 100%;
-}
-.w-2\/5 {
-  width: 40%;
-}
-.max-w-xs {
-  max-width: 20rem;
 }
 .flex-row {
   flex-direction: row;
@@ -536,70 +506,84 @@ video {
 .flex-col {
   flex-direction: column;
 }
-.items-center {
-  align-items: center;
-}
-.justify-end {
-  justify-content: flex-end;
+.items-start {
+  align-items: flex-start;
 }
 .justify-center {
   justify-content: center;
 }
-.justify-between {
-  justify-content: space-between;
-}
-.justify-around {
-  justify-content: space-around;
-}
-.gap-x-56 {
-  column-gap: 14rem;
-}
 .self-center {
   align-self: center;
-}
-.justify-self-center {
-  justify-self: center;
 }
 .rounded-full {
   border-radius: 9999px;
 }
-.rounded-2xl {
-  border-radius: 1rem;
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
-.rounded-l-2xl {
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
+.bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+}
+.bg-amber-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 211 77 / var(--tw-bg-opacity));
+}
+.bg-lime-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(101 163 13 / var(--tw-bg-opacity));
+}
+.bg-teal-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
+}
+.bg-cyan-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(6 182 212 / var(--tw-bg-opacity));
+}
+.bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+}
+.bg-violet-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(139 92 246 / var(--tw-bg-opacity));
+}
+.bg-fuchsia-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(162 28 175 / var(--tw-bg-opacity));
+}
+.bg-pink-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 39 119 / var(--tw-bg-opacity));
 }
 .bg-accent4 {
   --tw-bg-opacity: 1;
   background-color: rgb(18 24 52 / var(--tw-bg-opacity));
 }
-.bg-accent2 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 82 110 / var(--tw-bg-opacity));
-}
-.object-cover {
-  object-fit: cover;
-}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.pr-2 {
+  padding-right: 0.5rem;
 }
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
 }
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 .text-6xl {
   font-size: 3.75rem;
@@ -615,32 +599,37 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Nanum+Gothic+Coding:wght@400;700&display=swap');
 html,
 body {
   margin: 0px;
   padding: 0px;
-  font-family: "Poppins";
-  height: 100svh;
+  font-family: "Fragment Mono", monospace;
+  letter-spacing: -0.09em;
 }
 
-.contentLayer{
-  min-height: 100svh;
+#root{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.proj_link {
+  box-shadow: 5px -5px black;
+}
+
+h1, h2{
+  letter-spacing: -0.08em;
+}
+
+img{
+  image-rendering: pixelated;
 }
 
 .hover\:bg-green-300:hover {
@@ -655,47 +644,7 @@ body {
 
 @media (min-width: 768px) {
 
-  .md\:-mt-10 {
-    margin-top: -2.5rem;
-  }
-
-  .md\:-ml-10 {
-    margin-left: -2.5rem;
-  }
-
-  .md\:h-20 {
-    height: 5rem;
-  }
-
   .md\:w-\[175\%\] {
     width: 175%;
-  }
-
-  .md\:w-20 {
-    width: 5rem;
-  }
-
-  .md\:w-1\/4 {
-    width: 25%;
-  }
-
-  .md\:max-w-xl {
-    max-width: 36rem;
-  }
-
-  .md\:flex-row {
-    flex-direction: row;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-}
-
-@media (min-width: 1280px) {
-
-  .xl\:gap-x-80 {
-    column-gap: 20rem;
   }
 }
