--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -461,12 +461,6 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.fixed {
-  position: fixed;
-}
-.top-0 {
-  top: 0px;
-}
 .m-4 {
   margin: 1rem;
 }
@@ -475,9 +469,6 @@ video {
 }
 .ml-2 {
   margin-left: 0.5rem;
-}
-.-mt-1 {
-  margin-top: -0.25rem;
 }
 .mt-16 {
   margin-top: 4rem;
@@ -497,30 +488,18 @@ video {
 .h-24 {
   height: 6rem;
 }
-.w-\[500\%\] {
-  width: 500%;
-}
-.flex-row {
-  flex-direction: row;
-}
 .flex-col {
   flex-direction: column;
 }
 .items-start {
   align-items: flex-start;
 }
-.justify-center {
-  justify-content: center;
+.justify-between {
+  justify-content: space-between;
 }
-.self-center {
-  align-self: center;
-}
-.rounded-full {
-  border-radius: 9999px;
-}
-.bg-red-600 {
+.bg-red-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 .bg-orange-500 {
   --tw-bg-opacity: 1;
@@ -542,29 +521,21 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(6 182 212 / var(--tw-bg-opacity));
 }
-.bg-blue-600 {
+.bg-blue-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
 }
-.bg-violet-500 {
+.bg-violet-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(139 92 246 / var(--tw-bg-opacity));
+  background-color: rgb(196 181 253 / var(--tw-bg-opacity));
 }
-.bg-fuchsia-700 {
+.bg-fuchsia-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(162 28 175 / var(--tw-bg-opacity));
+  background-color: rgb(217 70 239 / var(--tw-bg-opacity));
 }
-.bg-pink-600 {
+.bg-pink-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(219 39 119 / var(--tw-bg-opacity));
-}
-.bg-accent4 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(18 24 52 / var(--tw-bg-opacity));
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  background-color: rgb(244 114 182 / var(--tw-bg-opacity));
 }
 .pr-2 {
   padding-right: 0.5rem;
@@ -576,10 +547,6 @@ video {
 .text-7xl {
   font-size: 4.5rem;
   line-height: 1;
-}
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }
 .text-2xl {
   font-size: 1.5rem;
@@ -595,10 +562,6 @@ video {
 .italic {
   font-style: italic;
 }
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -613,38 +576,10 @@ body {
   letter-spacing: -0.09em;
 }
 
-#root{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-}
-
 .proj_link {
   box-shadow: 5px -5px black;
 }
 
 h1, h2{
   letter-spacing: -0.08em;
-}
-
-img{
-  image-rendering: pixelated;
-}
-
-.hover\:bg-green-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.hover\:text-accent4:hover {
-  --tw-text-opacity: 1;
-  color: rgb(18 24 52 / var(--tw-text-opacity));
-}
-
-@media (min-width: 768px) {
-
-  .md\:w-\[175\%\] {
-    width: 175%;
-  }
 }
